[project]
name = "huron-qbo-vendor-import"
version = "0.1.0"
description = "Huron Market vendor invoice classification and QBO bill import generator"
requires-python = ">=3.11"
dependencies = ["openpyxl>=3.1"]

[project.scripts]
huron-qbo-import = "huron_qbo_import.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
